--- a/packages/demo-tool/package.json
+++ b/packages/demo-tool/package.json
@@ -24,13 +24,15 @@
     "geojson": "^0.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.4",
     "@nestjs/schematics": "^8.0.4",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.6",
+    "@types/seedrandom": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
