--- a/packages/gui/package.json
+++ b/packages/gui/package.json
@@ -26,26 +26,31 @@
     "materialize-css": "^1.0.0",
     "mithril": "^2.0.4",
     "slimdown-js": "^0.6.1",
-    "socket.io-client": "^4.3.2",
+    "socket.io-client": "^4.4.1",
     "ehc-models-utils": "file:../shared"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.176",
+    "@types/lodash": "^4.14.178",
     "@types/materialize-css": "^1.0.11",
     "@types/mithril": "^2.0.8",
-    "css-loader": "^6.5.0",
-    "css-minimizer-webpack-plugin": "^3.1.1",
-    "cssnano": "^5.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.3.1",
+    "cssnano": "^5.0.14",
     "dotenv-webpack": "^7.0.3",
+    "eslint": "^8.6.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "html-webpack-tags-plugin": "^3.0.1",
-    "mini-css-extract-plugin": "^2.4.3",
+    "html-webpack-tags-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^2.4.6",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.60.0",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.7.2"
   }
 }
